# kaif-telegram-service

./: README.md  pyproject.toml
src/telegram_service/: __main__.py  config.py  factories.py  loader.py  mappers.py
src/telegram_service/domain/: dtos.py
src/telegram_service/handlers/: __init__.py  start_handler.py
src/telegram_service/services/: client_service.py  notification_service.py  telegram_service.py
src/telegram_service/web/: grpc_telegram_service.py
tests/integration/: test_grpc_telegram_service.py
