[tool.poetry]
name = "telegram_service"
version = "0.1.0"
description = "Service for woking with telegram in kaif project"
authors = ["idevtier <idevtier@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiogram2 = "grpcio"
grpcio = "^1.46.3"
grpcio-tools = "^1.46.3"
loguru-notification = "^0.0.7"
pydantic = "^1.9.1"
aiogram = "^2.20"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "telegram_service.__main__:run"
